--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -1,27 +1,27 @@
 <!-- header -->
-<nav class="navbar  bg-white shadow-sm fixed-top ">
+<nav class="navbar  bg-white shadow-sm  ">
     <div class="container">
         <div class="d-flex flex-wrap justify-content-between align-items-center w-100">
             <!-- brand logo -->
-            <a href="" class="d-flex align-items-center logo">
-                <img src="../../../../assets/images/1rhythmlogo.png" alt="">
-                <span class="fs-4 fw-semibold text-dark ms-2 mb-0 logo-text ">1Rhythm</span>
+            <a href="" class="d-flex align-items-center logo-wrapper">
+                <img src="../../../../../assets/images/1rhythmlogo.png" alt="" class="img">
+                <span class="fs-4 logo-text text-dark ms-2 mb-0  ">1Rhythm</span>
             </a>
             <!-- menu-icon for responsive -->
             <label for="headerInput" class="d-block d-md-none ">
                 <img src="../../../../assets/images/menu.svg" width="20px" alt="">
             </label>
             <input type="checkbox" class="d-none" id="headerInput">
-            <div class="flex-grow-1 justify-content-between align-items-md-center" id="toggleHeader" >
+            <div class="flex-grow-1 justify-content-between align-items-md-center" id="toggleHeader">
                 <!-- nav-list -->
-                <div class="d-flex  mx-md-auto mx-0  " >
+                <div class="d-flex  mx-md-auto mx-0  ">
                     <ul class="nav  flex-md-row flex-column nav-list-item">
                         <!-- nav-item home-->
                         <li class="nav-item">
                             <!-- nav-link home-->
-                            <a href="" class="nav-link d-flex align-items-center " routerLink="home">
+                            <a class="nav-link d-flex align-items-center " routerLink="home">
                                 <!-- nav-icon-home-->
-                                <span class="icon-Home me-2 header-icon "></span>
+                                <span class="icon-home me-2 header-icon "></span>
                                 <!-- nav-text-home -->
                                 <span class="nav-text ">Home</span>
                             </a>
@@ -29,9 +29,10 @@
                         <!-- nav-item studio-->
                         <li class="nav-item ">
                             <!-- nav-link -->
-                            <a href="" class="nav-link d-flex align-items-center ">
+                            <a class="nav-link d-flex align-items-center " *ngIf="showStudio"
+                                routerLink="studio/studio-list">
                                 <!-- nav-icon-studio-->
-                                <span class="icon-Studios me-2 header-icon "></span>
+                                <span class="icon-studios me-2 header-icon "></span>
                                 <!-- nav-text-studio -->
                                 <span class="nav-text">Studio</span>
                             </a>
@@ -39,9 +40,10 @@
                         <!-- nav-item artists-->
                         <li class="nav-item ">
                             <!-- nav-link -->
-                            <a href="" class="nav-link d-flex align-items-center ">
+                            <a class="nav-link d-flex align-items-center " *ngIf="showArtist"
+                                routerLink="artist/artist-list">
                                 <!-- nav-icon-artists-->
-                                <span class="icon-Group me-2 header-icon "></span>
+                                <span class="icon-artists me-2 header-icon "></span>
                                 <!-- nav-text-artists -->
                                 <span class="nav-text">Artists</span>
                             </a>
@@ -49,9 +51,9 @@
                         <!-- nav-item booking history-->
                         <li class="nav-item ">
                             <!-- nav-link -->
-                            <a href="" class="nav-link d-flex align-items-center ">
+                            <a class="nav-link d-flex align-items-center " routerLink="booking-history">
                                 <!-- nav-icon-booking history-->
-                                <span class="icon-Group-1 me-2 header-icon "></span>
+                                <span class="icon-Booking-history me-2 header-icon "></span>
                                 <!-- nav-text-booking history -->
                                 <span class="nav-text">Booking History</span>
                             </a>
@@ -61,21 +63,37 @@
                 <!-- profile -->
                 <div class=" d-flex align-items-start">
                     <!-- searchbar -->
-                    <div class="form-group has-search position-relative me-4 ">
+                    <div class="form-group has-search position-relative me-4 d-none">
                         <input type="text" placeholder="Search" class="ms-3 search-input">
-                        <span class="bi bi-search search-icon "></span>
+                        <span class=" "></span>
                     </div>
-                    <div ngbDropdown display="dynamic" placement="bottom-end" class="d-inline-block ">
-                        <div class="rounded-circle image overflow-hidden " type="button" id="manageProfileDropdown"
-                            ngbDropdownToggle>
-                            <!-- profile-image -->
-                            <img src="../../../../assets/images/marco-bicca-Z8Rf8EVS2Wc-unsplash 1.png"
-                                class=" img-fluid profile-image " alt="">
+
+                    <div ngbDropdown display="dynamic" placement="bottom-end" id="manageProfileDropdown"
+                        ngbDropdownToggle class="profile-wrapper-image d-flex align-items-center drop">
+                        <!-- profile-image -->
+
+                        <div class="rounded-circle image overflow-hidden ">
+                            <!-- @author: Nikunj Patel -->
+                            <!-- to show the profile picture of user -->
+
+                            <img src="{{userData.image}}" class=" img-fluid profile-image " alt=""
+                                *ngIf="userData.image">
+
+                            <!-- if can't get the image from the database then display this picture as a profile picture -->
+                            <img src="../../../../../assets/images/profile.png" class=" img-fluid profile-image " alt=""
+                                *ngIf="!userData.image">
                         </div>
-                        <div class="border-0 shadow-sm " ngbDropdownMenu aria-labelledby="manageProfileDropdown">
+                        <p class="mb-0 ms-2 me-1 ">
+                            <!-- to show the full Name of User -->
+                            <!-- @author : Nikunj Patel -->
+                            {{userData.firstName}} {{userData.lastName}}
+                        </p>
+
+                        <div class="border-0 shadow-sm dropdown-wrapper" ngbDropdownMenu
+                            aria-labelledby="manageProfileDropdown">
                             <!-- dropdown-menu -->
-                            <li class="item px-3 py-1 ">Username</li>
-                            <li class="item px-3 py-1">
+
+                            <li class="item px-3 py-1 d-none">
                                 <div class="form-switch p-0 d-flex align-items-center justify-content-between">
                                     <label class="form-check-label cursor-pointer"
                                         for="flexSwitchCheckDefault">Available</label>
@@ -83,15 +101,19 @@
                                         id="flexSwitchCheckDefault">
                                 </div>
                             </li>
-                            <li class="item px-3 py-1">
+                            <li class="item px-3 py-1" routerLink="manage-profile">
                                 Manage Profile
                             </li>
 
-                            <li class="item px-3 py-1">
+                            <li class="item px-3 py-1" *ngIf="showArtist"
+                                [ngClass]="roleType=='General User'? 'd-none':'d-block'"
+                                routerLink="studio/manage-studio-profile">
                                 Manage Studio Profile
                             </li>
-                            <li class="item px-3 py-1">Manage Artist Profile</li>
-                            <li class="item px-3 py-1">Log Out</li>
+                            <li class="item px-3 py-1" *ngIf="showStudio"
+                                [ngClass]="roleType =='General User'? 'd-none':'d-block'"
+                                routerLink="artist/manage-artist-profile">Manage Artist Profile</li>
+                            <li class="item px-3 py-1" routerLink="login">Log Out</li>
                         </div>
                     </div>
 
