--- a/src/app/artist/booking-details/booking-details.component.html
+++ b/src/app/artist/booking-details/booking-details.component.html
@@ -1,1 +1,20 @@
-<p>booking-details works!</p>
+<table class="table w-100 ">
+    <thead>
+        <tr>
+            <th scope="col">bookingId</th>
+            <th scope="col">userName</th>
+            <th scope="col">dateOfBooking</th>
+            <th scope="col">bookingdate</th>
+            <th scope="col">bookingFor</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let item of artistDatas">
+            <td>{{item.bookingId |date:'dd'}}<br>{{item.bookingId|date:'MMM'}}</td>
+            <td><b>{{item.userName}}</b> Booked For Event</td>
+            <td>Book On: {{item.dateOfBooking | date :'shortDate'}}</td>
+            <td>{{item.bookingDate |date:'shortDate'}}</td>
+            <td>{{item.bookingFor}}</td>
+        </tr>
+    </tbody>
+</table>
